// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / With Custom Cells Bold Cells 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c21 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c7 {
  width: inherit;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
}

.c13 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c16 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: none;
}

.c2 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:nth-last-child(2) {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:nth-last-child(2) {
  padding-right: 0;
}

.c3 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c5 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c0 {
  position: relative;
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8 c9"
        >
          Column 1
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8 c9"
        >
          Column 2
        </span>
      </div>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8 c9"
        >
          Column 3
        </span>
      </div>
    </div>
    <div
      className="c10 c5 c11"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8 c9"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c12"
    role="row"
  >
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c14 c9"
        >
          123
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c15 c9"
        >
          123
        </span>
      </div>
    </div>
    <div
      className="c4 c13"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c14 c9"
        >
          123
        </span>
      </div>
    </div>
    <div
      className="c10 c13 c16 c11"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c17 c18"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c19"
        >
          <svg
            aria-hidden="true"
            className="c20"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            />
          </svg>
        </span>
      </button>
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c17 c18"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c19"
        >
          <svg
            aria-hidden="true"
            className="c21 c22"
            direction="down"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 16 16"
          >
            <polygon
              points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With Custom Cells Custom Cells 1`] = `
.c24 {
  color: #282823;
}

.c25 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 0 150px;
  -ms-flex: 0 0 150px;
  flex: 0 0 150px;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  box-sizing: border-box;
}

.c18 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #6E6E69;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c30 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c31 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c32 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c23 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c29 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c35 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c27 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c27,
.c27[type='button'],
.c27[type='reset'],
.c27[type='submit'] {
  -webkit-appearance: button;
}

.c27::-moz-focus-inner,
.c27[type='button']::-moz-focus-inner,
.c27[type='reset']::-moz-focus-inner,
.c27[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c27:-moz-focusring,
.c27[type='button']:-moz-focusring,
.c27[type='reset']:-moz-focusring,
.c27[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c7 {
  width: inherit;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
}

.c22 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c28 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c26 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c20 {
  display: none;
}

.c2 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:nth-last-child(2) {
  padding-right: 0;
}

.c21 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c21:hover {
  background: #F5F5F5;
}

.c21 > *:first-child {
  padding-left: 0;
}

.c21 > *:nth-last-child(2) {
  padding-right: 0;
}

.c3 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c33 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c17 {
  margin-left: 4px;
}

.c11 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c5 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c34 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c0 {
  position: relative;
}

.c13 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8 c9"
        >
          Date
        </span>
      </div>
    </div>
    <div
      aria-sort="none"
      className="c10 c5"
      role="columnheader"
    >
      <a
        className="c11"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <div
          className="c12 c13"
        >
          <div
            className="c14 c15"
          >
            <div
              className="c6 c7"
            >
              <span
                className="c8 c9"
              >
                Transferable quantity
              </span>
            </div>
          </div>
          <div
            className="c14"
          >
            <span
              className="c8 c9"
            >
              USD
            </span>
          </div>
          <div
            className="c14"
          >
            <svg
              aria-hidden="true"
              className="c16 c17"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8 c9"
        >
          Country
        </span>
      </div>
    </div>
    <div
      className="c18 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8 c9"
        >
          Percentage
        </span>
      </div>
    </div>
    <div
      className="c19 c5 c20"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8 c9"
        />
      </div>
    </div>
  </div>
  <div
    className="c1 c21"
    role="row"
  >
    <div
      className="c4 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c23 c9"
        >
          <span
            className="c24"
          >
            <time>
              7/10/2020, 12:53
            </time>
          </span>
        </span>
      </div>
    </div>
    <div
      className="c10 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c23 c9"
        >
          
          300
        </span>
      </div>
    </div>
    <div
      className="c4 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c23 c9"
        >
          <svg
            className="c25"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </span>
      </div>
    </div>
    <div
      className="c18 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c23 c9"
        >
          
          75
          %
        </span>
      </div>
    </div>
    <div
      className="c19 c22 c26 c20"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c27 c28"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c29"
        >
          <svg
            aria-hidden="true"
            className="c30"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            />
          </svg>
        </span>
      </button>
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c27 c28"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c29"
        >
          <svg
            aria-hidden="true"
            className="c31 c32"
            direction="down"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 16 16"
          >
            <polygon
              points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c21"
    role="row"
  >
    <div
      className="c4 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c23 c9"
        >
          <span
            className="c24"
          >
            <time>
              7/10/2020, 12:53
            </time>
          </span>
        </span>
      </div>
    </div>
    <div
      className="c10 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c23 c9"
        >
          
          100
        </span>
      </div>
    </div>
    <div
      className="c4 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c23 c9"
        >
          <svg
            className="c25"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <path
              d="M0 0h640v480H0z"
              fill="#ef2b2d"
            />
            <path
              d="M180 0h120v480H180z"
              fill="#fff"
            />
            <path
              d="M0 180h640v120H0z"
              fill="#fff"
            />
            <path
              d="M210 0h60v480h-60z"
              fill="#002868"
            />
            <path
              d="M0 210h640v60H0z"
              fill="#002868"
            />
            <title>
              Norway
            </title>
          </svg>
        </span>
      </div>
    </div>
    <div
      className="c18 c22"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c23 c9"
        >
          
          25
          %
        </span>
      </div>
    </div>
    <div
      className="c19 c22 c26 c20"
      role="cell"
    >
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c27 c28"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c29"
        >
          <svg
            aria-hidden="true"
            className="c30"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            />
          </svg>
        </span>
      </button>
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c27 c28"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c29"
        >
          <svg
            aria-hidden="true"
            className="c31 c32"
            direction="down"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 16 16"
          >
            <polygon
              points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1 c2 c33"
    role="row"
  >
    <div
      className="c4 c34"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c35 c9"
        />
      </div>
    </div>
    <div
      className="c10 c34"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c35 c9"
        >
          
          400
        </span>
      </div>
    </div>
    <div
      className="c4 c34"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c35 c9"
        />
      </div>
    </div>
    <div
      className="c18 c34"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c35 c9"
        >
          
          25
          %
        </span>
      </div>
    </div>
    <div
      className="c19 c34 c20"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c35 c9"
        />
      </div>
    </div>
  </div>
</div>
`;
